--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
   <header>
-    <img src="images/logo.svg" class="logo_">
+    <img src="images/logo.svg" class="logo_" alt="">
     <a class="button_a"> Try It Free </a>
   </header>
 
@@ -27,7 +27,7 @@
   <p> Huddle re-imagines the way we build communities. You have a <br> voice, but so does your audience. Create connections with your <br> users as you engage in genuine discussions. </p>
   <a class="button_a_1"> Get started for free </a>
 
-  <img src="images/screen-mockups.svg" class="pic_1">
+  <img src="images/screen-mockups.svg" class="pic_1" alt="">
 
   </div>
 
@@ -35,7 +35,7 @@
 
     <div class="child_">
 
-    <img src="images/icon-communities.svg" class="icon_">
+    <img src="images/icon-communities.svg" class="icon_" alt="">
     <h2>1.4k+</h2>
     <p>Communities Formed</p>
 
@@ -43,7 +43,7 @@
 
     <div class="child_">
 
-    <img src="images/icon-messages.svg" class="icon_">
+    <img src="images/icon-messages.svg" class="icon_" alt="">
     <h2>2.7m+</h2>
     <p>Messages Sent</p>
 
@@ -70,13 +70,13 @@
 
       </div>
 
-      <img src="images/illustration-grow-together.svg" class="pic_">
+      <img src="images/illustration-grow-together.svg" class="pic_" alt="">
 
     </div>
 
     <div class="flex-box flex-box-2">
 
-      <img src="images/illustration-flowing-conversation.svg" class="pic_">
+      <img src="images/illustration-flowing-conversation.svg" class="pic_" alt="">
 
       <div class="writing_3">
 
@@ -96,7 +96,7 @@
 
       </div>
 
-      <img src="images/illustration-your-users.svg" class="pic_">
+      <img src="images/illustration-your-users.svg" class="pic_" alt="">
 
     </div>
 
@@ -160,7 +160,8 @@
   
         <!-- Form ---------------------------> 
         <form>
-          <input type="email" placeholder=""/>
+          <label>
+          <input type="email" placeholder=""/> </label>
           <button class="subscribe-btn">
             Subscribe
           </button>
